--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
 
+    <!--Link jquery-->   
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
     <!--Link js Propios-->
     <script src="js/obtenerProductos.js"></script>
     <script src="js/obtenerRedes.js"></script>
