Se obtiene producto a traves de Ajax , se agrega pagina de checkout

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                             <strong></strong>
                         </li>
                     </ul>
+                    <a href="checkout.html">Ir a Pagar</a>
                 </div>
             </div>
 
