correccion carrito todo la pantalla

--- a/index.html
+++ b/index.html
@@ -104,7 +104,24 @@
             </div>
         </div>
 
-        <div class="canasta" id="contenedor-general-canasta">
+        <div class="canasta container-fluid" id="contenedor-general-canasta">
+            <div class="row text-center justify-content-center">
+                <div class="col-md-6 col-lg-10 order-md-last">
+                    <h4 class="d-flex justify-content-between align-items-center mb-3">
+                        <span class="text-dark">CARRITO</span>
+                        <span id="badgeCarrito" class="badge bg-warning rounded-pill">0</span>
+                    </h4>
+                    <ul id="listadoCarrito" class="list-group mb-3">
+                    </ul>
+                    <ul class="list-group mb-3">
+                        <li class="list-group-item d-flex justify-content-between">
+                            <span id="totalPagar">Total</span>
+                            <strong></strong>
+                        </li>
+                    </ul>
+                    <a href="checkout.html">Ir a Pagar</a>
+                </div>
+            </div>
         </div>
 
     </main>
