--- a/checkout.html
+++ b/checkout.html
@@ -58,7 +58,7 @@
     </header>
 
     <main class="container">
-    
+
         <div class="conteiner-fluid pt-4 py-5">
             <!-- Titulo General -->
             <div class="row bg-dark text-secondary text-center px-4 py-5 my-2">
@@ -183,7 +183,8 @@
 
                     <div class="form-check">
                         <input type="checkbox" class="form-check-input" id="save-info">
-                        <label class="form-check-label" for="save-info">Guarde esta información para la próxima vez</label>
+                        <label class="form-check-label" for="save-info">Guarde esta información para la próxima
+                            vez</label>
                     </div>
 
                     <hr class="my-4">
@@ -243,7 +244,10 @@
 
                     <hr class="my-4">
 
-                    <button class="w-100 btn btn-primary btn-lg" type="submit">Finalizar</button>
+                    <div class="row text-center justify-content-center">
+                        <button class="w-100 btn btn-primary btn-lg" type="submit">Finalizar</button>
+                        <a class="my-4 text-center" href="index.html">Cancelar</a>
+                    </div>
                 </form>
             </div>
         </div>
@@ -289,10 +293,10 @@
 
     </footer>
 
-    <!--Link jquery-->   
+    <!--Link jquery-->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        
+
     <script src="js/checkout.js"></script>
 
 </body>
