--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
         </div>
 
-        <!-- Canasta -->
+        <!-- Canasta 
         <div class="container-fluid" id="contenedorCarrito">
             <div class="row text-center justify-content-center">
                 <div class="col-md-6 col-lg-10 order-md-last">
@@ -102,14 +102,14 @@
                     <a href="checkout.html">Ir a Pagar</a>
                 </div>
             </div>
-        </div>
+        </div>-->
 
+        <!-- Canasta -->
         <div class="canasta container-fluid" id="contenedor-general-canasta">
-            <div class="row text-center justify-content-center">
-                <div class="col-md-6 col-lg-10 order-md-last">
+            <div class="row mx-1">
+                <div class="col order-md-last">
                     <h4 class="d-flex justify-content-between align-items-center mb-3">
                         <span class="text-dark">CARRITO</span>
-                        <span id="badgeCarrito" class="badge bg-warning rounded-pill">0</span>
                     </h4>
                     <ul id="listadoCarrito" class="list-group mb-3">
                     </ul>
