--- a/checkout.html
+++ b/checkout.html
@@ -33,28 +33,6 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white">
-            <div class="container-fluid">
-                <a href="#" class="navbar-brand">
-                    <img src="imagenes/logoHorizontalAmarillo.png" alt="logo Web Ov suspensión" class="img-fluid"
-                        width="150" height="120">
-                </a>
-
-                <!-- Boton para el menu movil -->
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu"
-                    aria-controls="menu" aria-expanded="false" aria-label="Mostrar / Ocultar Menu">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <!-- Menu de navegacion -->
-                <div class="collapse navbar-collapse" id="menu">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 menuNavegacion">
-                        <li class="nav-item"><a href="index.html" class="nav-link">Inicio</a></li>
-
-                    </ul>
-                </div>
-            </div>
-        </nav>
     </header>
 
     <main class="container">
@@ -298,6 +276,8 @@
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
     <script src="js/checkout.js"></script>
+    <script src="js/obtenerRedes.js"></script>
+
 
 </body>
 
