--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                 <div class="collapse navbar-collapse" id="menu">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 menuNavegacion">
                         <li class="nav-item"><a href="index.html" class="nav-link">Inicio</a></li>
-
+                        <li class="nav-item"><a href="/pages/quienesSomos.html" class="nav-link">Quienes Somos</a></li>
+                        <li class="nav-item"><a href="/pages/contacto.html" class="nav-link">Contacto</a></li>
                     </ul>
 
                     <a class="btn btn-outline-light me-2" href="error404.html">Iniciar Sesión</a>
@@ -83,27 +84,6 @@
             </div>
         </div>
 
-        <!-- Canasta 
-        <div class="container-fluid" id="contenedorCarrito">
-            <div class="row text-center justify-content-center">
-                <div class="col-md-6 col-lg-10 order-md-last">
-                    <h4 class="d-flex justify-content-between align-items-center mb-3">
-                        <span class="text-dark">CARRITO</span>
-                        <span id="badgeCarrito" class="badge bg-warning rounded-pill">0</span>
-                    </h4>
-                    <ul id="listadoCarrito" class="list-group mb-3">
-                    </ul>
-                    <ul class="list-group mb-3">
-                        <li class="list-group-item d-flex justify-content-between">
-                            <span id="totalPagar">Total</span>
-                            <strong></strong>
-                        </li>
-                    </ul>
-                    <a href="checkout.html">Ir a Pagar</a>
-                </div>
-            </div>
-        </div>-->
-
         <!-- Canasta -->
         <div class="canasta container-fluid" id="contenedor-general-canasta">
             <div class="row mx-1">
@@ -112,6 +92,7 @@
                         <span class="text-dark">CARRITO</span>
                     </h4>
                     <ul id="listadoCarrito" class="list-group mb-3">
+                    
                     </ul>
                     <ul class="list-group mb-3">
                         <li class="list-group-item d-flex justify-content-between">
