--- a/checkout.html
+++ b/checkout.html
@@ -48,7 +48,7 @@
             </div>
         </div>
 
-        <div class="row g-5">
+        <div id="formulario" class="row g-5">
             <div class="col-md-5 col-lg-6 order-md-last">
                 <h4 class="d-flex justify-content-between align-items-center mb-3">
                     <span class="text-warning">Su carrito</span>
@@ -78,7 +78,7 @@
                             <label for="firstName" class="form-label">Nombre</label>
                             <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
                             <div class="invalid-feedback">
-                                Valid first name is required.
+                                Nombre es requerido.
                             </div>
                         </div>
 
@@ -86,7 +86,7 @@
                             <label for="lastName" class="form-label">Apellido</label>
                             <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
                             <div class="invalid-feedback">
-                                Valid last name is required.
+                                Apellido es requerido.
                             </div>
                         </div>
 
@@ -94,10 +94,7 @@
                             <label for="username" class="form-label">Usuario</label>
                             <div class="input-group has-validation">
                                 <span class="input-group-text">@</span>
-                                <input type="text" class="form-control" id="username" placeholder="Usuario" required>
-                                <div class="invalid-feedback">
-                                    Your username is required.
-                                </div>
+                                <input type="text" class="form-control" id="username" placeholder="Usuario">
                             </div>
                         </div>
 
@@ -106,7 +103,7 @@
                                     class="text-muted">(Opcional)</span></label>
                             <input type="email" class="form-control" id="email" placeholder="tu@ejemplo.com">
                             <div class="invalid-feedback">
-                                Please enter a valid email address for shipping updates.
+                                Ingrese una dirección de correo electrónico válida.
                             </div>
                         </div>
 
@@ -114,7 +111,7 @@
                             <label for="address" class="form-label">Dirección</label>
                             <input type="text" class="form-control" id="address" placeholder="Av. Colon 1248" required>
                             <div class="invalid-feedback">
-                                Please enter your shipping address.
+                                Por favor introduzca su direccion de envio.
                             </div>
                         </div>
 
@@ -122,10 +119,10 @@
                             <label for="country" class="form-label">País</label>
                             <select class="form-select" id="country" required>
                                 <option value="">Seleccionar...</option>
-                                <option>United States</option>
+                                <option>Argentina</option>
                             </select>
                             <div class="invalid-feedback">
-                                Please select a valid country.
+                                Seleccione un país válido.
                             </div>
                         </div>
 
@@ -133,10 +130,10 @@
                             <label for="state" class="form-label">Ciudad</label>
                             <select class="form-select" id="state" required>
                                 <option value="">Seleccionar...</option>
-                                <option>California</option>
+                                <option>Córdoba</option>
                             </select>
                             <div class="invalid-feedback">
-                                Please provide a valid state.
+                                Proporcione un Provincia válida.
                             </div>
                         </div>
 
@@ -144,7 +141,7 @@
                             <label for="zip" class="form-label">Código Postal</label>
                             <input type="text" class="form-control" id="zip" placeholder="" required>
                             <div class="invalid-feedback">
-                                Zip code required.
+                                Codigo postal es requerido.
                             </div>
                         </div>
                     </div>
@@ -191,7 +188,7 @@
                             <input type="text" class="form-control" id="cc-name" placeholder="" required>
                             <small class="text-muted">Como se muestra en la tarjeta</small>
                             <div class="invalid-feedback">
-                                Name on card is required
+                                Se requiere el nombre en la tarjeta.
                             </div>
                         </div>
 
@@ -199,7 +196,7 @@
                             <label for="cc-number" class="form-label">Numero de la tarjeta</label>
                             <input type="text" class="form-control" id="cc-number" placeholder="" required>
                             <div class="invalid-feedback">
-                                Credit card number is required
+                                Se requiere el número de tarjeta.
                             </div>
                         </div>
 
@@ -207,7 +204,7 @@
                             <label for="cc-expiration" class="form-label">Fecha Vencimiento</label>
                             <input type="text" class="form-control" id="cc-expiration" placeholder="" required>
                             <div class="invalid-feedback">
-                                Expiration date required
+                                Se requiere fecha de vencimiento.
                             </div>
                         </div>
 
@@ -215,7 +212,7 @@
                             <label for="cc-cvv" class="form-label">CVV</label>
                             <input type="text" class="form-control" id="cc-cvv" placeholder="" required>
                             <div class="invalid-feedback">
-                                Security code required
+                                Se requiere codigo de seguridad.
                             </div>
                         </div>
                     </div>
@@ -223,12 +220,27 @@
                     <hr class="my-4">
 
                     <div class="row text-center justify-content-center">
-                        <button class="w-100 btn btn-primary btn-lg" type="submit">Finalizar</button>
+                        <button name='btnVerifica' id='btnVerifica' class="w-100 btn btn-primary btn-lg"
+                            type="submit">Finalizar</button>
                         <a class="my-4 text-center" href="index.html">Cancelar</a>
                     </div>
                 </form>
             </div>
         </div>
+
+        <div class="text-secondary text-center px-4 py-5 my-2" id="exito" style="display:none">
+            <div class="col">
+                <svg xmlns="http://www.w3.org/2000/svg" color="green" width="100" height="100" fill="currentColor"
+                    class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+                    <path
+                        d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z">
+                    </path>
+                </svg>
+                <h3 class="display-5 mt-5">Su pago ha sido procesado con éxito.</h3>
+                <a class="my-4 text-center" href="index.html">Regresar a la tienda</a>
+            </div>
+        </div>
+
     </main>
 
     <footer class="page-footer font-small pt-4 mt-3 text-white">
