--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -88,23 +88,23 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+                <div id= "" class="col-lg-6">
                     <div class="mb-3">
                         <label for="nombre" class="form-label">Nombre</label>
                         <input type="text" class="form-control" id="nombre"
-                            placeholder="Nombre">
+                            placeholder="*Nombre">
                     </div>
 
                     <div class="mb-3">
                         <label for="apellido" class="form-label">Apellido</label>
                         <input type="text" class="form-control" id="apellido"
-                            placeholder="Apellido">
+                            placeholder="*Apellido">
                     </div>
 
                     <div class="mb-3">
                         <label for="email" class="form-label">Email</label>
                         <input type="email" class="form-control" id="email"
-                            placeholder="name@example.com">
+                            placeholder="*name@example.com">
                     </div>
 
                     <div class="mb-3">
@@ -118,7 +118,11 @@
                         <textarea class="form-control" id="consulta" rows="6"></textarea>
                     </div>
 
+                    <button name='btnContacto' id='btnContacto' class="w-100 btn btn-primary btn-lg" type="submit">Finalizar</button>
+                    
+                    <div Id='divValidacion'>
 
+                    </div>
                 </div>
 
                 <div class="col-lg-6">
@@ -202,6 +206,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
+
+    <!--Link jquery-->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+    <script src="../js/contacto.js"></script>
 </body>
 
 </html>
