--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 <div class="collapse navbar-collapse" id="menu">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 menuNavegacion">
                         <li class="nav-item"><a href="index.html" class="nav-link">Inicio</a></li>
-                        <li class="nav-item"><a href="/pages/quienesSomos.html" class="nav-link">Quienes Somos</a></li>
-                        <li class="nav-item"><a href="/pages/contacto.html" class="nav-link">Contacto</a></li>
+                        <li class="nav-item"><a href="pages/quienesSomos.html" class="nav-link">Quienes Somos</a></li>
+                        <li class="nav-item"><a href="pages/contacto.html" class="nav-link">Contacto</a></li>
                     </ul>
 
                     <a class="btn btn-outline-light me-2" href="error404.html">Iniciar Sesión</a>
